feat: don't allow keywords to be returned by tokens